--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,20 +1,21 @@
 ja:
-  activerecord:
-    models: 
-      review: レビュー
-    attributes:
-      review:
-        automaker_id: メーカー
-        model_of_car: 車種
-        grade: グレード
-        era_name_id: 年式(元号)
-        model_year: 年式(和暦)
-        design_id: デザイン
-        driving_performance_id: 走行性能
-        ride_comfort_id: 乗り心地
-        lording_id: 積載性
-        fuel_economy_id: 燃費
-        price_id: 価格
-        good_point: 良い点
-        bad_point: 悪い点
-        user: ユーザー
+ activerecord:
+   attributes:
+     user:
+       nickname: ニックネーム
+       birthday: 生年月日
+       phone_number: 電話番号
+     review:
+      automaker_id: メーカー
+      model_of_car: 車種
+      grade: グレード
+      era_name_id: 年式(元号)
+      model_year: 年式
+      design_id: デザイン
+      driving_performance_id: 走行性能
+      ride_comfort_id: 乗り心地
+      lording_id: 積載性
+      fuel_economy_id: 燃費
+      price_id: 価格
+      good_point: 良い点
+      bad_point: 悪い点
